# jaffle-shop

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml  workspace.yaml
api/jaffle_api/: __init__.py  deps.py  main.py
api/jaffle_api/routes/: app.py  overview.py
dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/macros/: create_schemas_if_not_exists.sql  generate_schema_name.sql
dbt/seeds/: dim_date.csv
dbt/snapshots/: snap_customers.sql  snap_products.sql
design/: README.md  colors_and_type.css
design/Jaffle Shop dashboard/: app.html  churn.html  data-quality.html  index.html  ltv.html
design/Jaffle Shop dashboard/components/: charts.jsx  (+5 more)
design/preview/: brand-logo.html  brand-mark.html  brand-pattern.html  colors-accent.html  colors-ink.html  colors-paper.html  colors-primary.html  colors-signal.html  components-buttons.html  components-fields.html  components-nav.html  components-quote.html  components-service-cards.html  components-stats.html  radii-shadows.html  spacing-scale.html  type-body.html  type-display.html  type-eyebrow-mono.html  type-headings.html
docs/: data-model.html
pipeline/jaffle_pipeline/: __init__.py  definitions.py  jafgen_runner.py  paths.py  resources.py  schedules.py
scripts/: bootstrap.sh  build_data_model_html.py  build_dim_date_seed.py  load_raw.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  main.tsx
(+55 files in other folders)
